--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 HTTP/1.1 200 OK
-Content-Type: text/html; charset=utf-8
+Content-Type: text/html
 <!-- Content-Length: 149
 Connection: keep-alive
 Cache-Control: s-maxage=300, public, max-age=0
@@ -29,5 +29,4 @@ Age: 7 -->
 
 </body>
 </html>
-
 
