--- a/www/403.html
+++ b/www/403.html
@@ -2,11 +2,11 @@
 <html>
 
     <head>
-        <title> 404 Not Found</title>
+        <title>403 Forbidden</title>
     </head>
 
     <body>
-        <h1 style="text-align:center">404 Not Found</h1>
+        <h1 style="text-align:center">403 Forbidden</h1>
         <hr>
         <p style="text-align:center">Webserv/1.0</p>
     </body>
