--- a/www/form.html
+++ b/www/form.html
@@ -1,17 +1,12 @@
+//Attention verifier les types de donnees
+
+
 <!DOCTYPE html>
 <body>
-	<form action="/my-handling-form-page" method="post">
-	<div>
-		<label for="name">Nom&nbsp;:</label>
-		<input type="text" id="name" name="user_name" />
-	<div>
-	<div>
-		<label for="mail">E-mail&nbsp;:</label>
-		<input type="email" id="mail" name="user_email" />
-	</div>
-	<div>
-		<label for="msg">Message :</label>
-		<textarea id="msg" name="user_message"></textarea>
-	</div>
+	<form method="post">
+		<label> Name : </label>
+		<input type="text" name="user_name" />
+		<input type="submit" value="Submit info">
 	</form>
 </body>
+
