--- a/www/form.html
+++ b/www/form.html
@@ -1,12 +1,8 @@
-//Attention verifier les types de donnees
-
-
-<!DOCTYPE html>
-<body>
-	<form method="post">
-		<label> Name : </label>
-		<input type="text" name="user_name" />
-		<input type="submit" value="Submit info">
-	</form>
-</body>
-
+<form method="POST">
+	<label for="name">Name:</label><br>
+	<input type="text" id="name" name="name"><br>
+	<label for="email">Email:</label><br>
+	<input type="email" id="email" name="email"><br><br>
+	<input type="file" name="file"> <br> <br>
+	<input type="submit" value="Submit">
+</form>
