--- a/error_pages/403.html
+++ b/error_pages/403.html
@@ -7,6 +7,7 @@
 
     <body>
         <h1 style="text-align:center">403 Forbidden</h1>
+        <h2 style="text-align:center">default</h2>
         <hr>
         <p style="text-align:center">Webserv/1.0</p>
     </body>
