--- a/www/400.html
+++ b/www/400.html
@@ -19,6 +19,7 @@
 
     <body>
         <h1 style="text-align:center">400 Bad Request</h1>
+        <h2 style="text-align:center">www</h2>
         <hr>
         <p style="text-align:center">Webserv/1.0</p>
     </body>
