--- a/www/form.html
+++ b/www/form.html
@@ -1,4 +1,4 @@
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
 	<label for="name">Name:</label><br>
 	<input type="text" id="name" name="name"><br>
 	<label for="email">Email:</label><br>
