--- a/www/download.html
+++ b/www/download.html
@@ -7,7 +7,20 @@
 
     <body>
         <h1 style="text-align:center">Download Me!</h1>
-        <a href=".download_file/100MB.zip" download="big_binary">Download</a>
+
+        <a href="./Download_file/5MB.zip" download="5MB.zip">5MB.zip</a>
+        </br>
+        <a href="./Download_file/10MB.zip" download="10MB.zip">10MB.zip</a>
+        </br>
+        <a href="./Download_file/20MB.zip" download="20MB.zip">20MB.zip</a>
+        </br>
+        <a href="./Download_file/50MB.zip" download="50MB.zip">50MB.zip</a>
+        </br>
+        <a href="./Download_file/100MB.zip" download="100MB.zip">100MB.zip</a>
+        </br>
+        <a href="./Download_file/512MB.zip" download="512MB.zip">512MB.zip</a>
+        </br>
+        <a href="./Download_file/42.jpg" download="42.jpg">42.jpg</a>
         <hr>
         <p style="text-align:center">Webserv/1.0</p>
     </body>
