--- a/www/form.html
+++ b/www/form.html
@@ -1,5 +1,5 @@
-<!-- <form method="POST" action="form.php"> -->
-	<form method="POST" enctype="multipart/form-data" action="form.php">
+<!-- <form method="POST" enctype="multipart/form-data" action="form.php"> -->
+<form method="POST" action="form.php">
 		<label for="name">Name:</label><br>
 		<input type="text" id="name" name="name"><br>
 		<label for="email">Email:</label><br>
