--- a/docker/html/delete.html
+++ b/docker/html/delete.html
@@ -7,9 +7,6 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>Docker + Nginx</h1>
-	<form action="/form.php" method="post">
-		<input type="text" name="name">
-	</form>
+	Delete
 </body>
 </html>
