--- a/docker/html/index.html
+++ b/docker/html/index.html
@@ -10,6 +10,7 @@
 	<h1>Docker + Nginx</h1>
 	<form action="/form.php" method="post">
 		<input type="text" name="name">
+		<input type="submit" name="submit" value="submit">
 	</form>
 </body>
 </html>
