IN PROGRESS put the new line in the file

--- a/error_pages/500.html
+++ b/error_pages/500.html
@@ -6,8 +6,7 @@
     </head>
 
     <body>
-        <h1 style="text-align:center">500</h1>
-        <h1 style="text-align:center">Internal Server Error</h1>
+        <h1 style="text-align:center">500 Internal Server Error</h1>
         <h2 style="text-align:center">default</h2>
         <hr>
         <p style="text-align:center">Webserv/1.0</p>
