--- a/www/form.html
+++ b/www/form.html
@@ -1,10 +1,11 @@
 <!-- <form method="POST" action="form.php"> -->
 <form method="POST" action="form.php" enctype="multipart/form-data">
-		<label for="name">Name:</label><br>
-		<input type="text" id="name" name="name"><br>
-		<label for="email">Email:</label><br>
-		<input type="email" id="email" name="email"><br><br>
-		<input type="file" name="file"> <br> <br>
-		<input type="submit" value="Submit">
-	</form>
+	<label for="name">Name:</label><br>
+	<input type="text" id="name" name="name"><br><br>
+	<input type="file" name="file"> <br> <br>
+	<label for="email">Email:</label><br>
+	<input type="email" id="email" name="email"><br><br>
+
+	<input type="submit" value="Submit">
+</form>
 	
