--- a/www/form.html
+++ b/www/form.html
@@ -3,6 +3,8 @@
 	<label for="name">Name:</label><br>
 	<input type="text" id="name" name="name"><br><br>
 	<input type="file" name="file"> <br> <br>
+	<input type="file" name="file2"> <br> <br>
+
 	<label for="email">Email:</label><br>
 	<input type="email" id="email" name="email"><br><br>
 
