split \r in file not working

--- a/www/form.html
+++ b/www/form.html
@@ -1,9 +1,9 @@
 <!-- <form method="POST" action="form.php"> -->
 <form method="POST" action="form.php" enctype="multipart/form-data">
+	<input type="file" name="my_file"> <br> <br>
 	<label for="name">Name:</label><br>
 	<input type="text" id="name" name="name"><br><br>
-	<input type="file" name="file"> <br> <br>
-	<input type="file" name="file2"> <br> <br>
+	<!-- <input type="file" name="file2"> <br> <br> -->
 
 	<label for="email">Email:</label><br>
 	<input type="email" id="email" name="email"><br><br>
