--- a/www/form.html
+++ b/www/form.html
@@ -3,7 +3,7 @@
 	<input type="file" name="my_file"> <br> <br>
 	<label for="name">Name:</label><br>
 	<input type="text" id="name" name="name"><br><br>
-	<!-- <input type="file" name="file2"> <br> <br> -->
+	<input type="file" name="file2"> <br> <br>
 
 	<label for="email">Email:</label><br>
 	<input type="email" id="email" name="email"><br><br>
