--- a/html/download.html
+++ b/html/download.html
@@ -19,9 +19,9 @@
             <p>This files are being downloaded from the server!</p>
         </div>
       
-        <a href="./Download_file/5MB.zip" download="5MB.zip" class="download small">Small</a>
-        <a href="./Download_file/50MB.zip" download="50MB.zip" class="download medium">Medium</a>
-        <a href="./Download_file/512MB.zip" download="512MB.zip" class="download large">Large</a>
+        <a href="./download_files/dog.jpg" download="dog.jpg" class="download small">Small</a>
+        <a href="./download_files/dog.jpg" download="dog.jpg" class="download medium">Medium</a>
+        <a href="./download_files/dog.jpg" download="dog.jpg" class="download large">Large</a>
         </br>
         <nav>
             <a href="post.html" class="previous">Previous</a>
