--- a/html/post.html
+++ b/html/post.html
@@ -18,7 +18,7 @@
             <h2>Second Form</h2>
             <p>This form is being sent using post request!</p>
         </div>
-        <form action="" method="post" target="_blank">
+        <form action="" method="post" target="_blank" enctype="multipart/form-data">
             <label>
                 Name<br>
                 <input type="text" name="name" placeholder="Please insert a name to the file!" required>
@@ -30,7 +30,7 @@
             <input type="submit" name="submit" value="Submit">
         </form>
         <nav>
-            <a href="index.html" class="previous">Previous</a>
+            <a href="get.html" class="previous">Previous</a>
             <a href="download.html" class="next">Next</a>
         </nav>
     </section>
