--- a/www/form.html
+++ b/www/form.html
@@ -1,5 +1,5 @@
 <!-- <form method="POST" action="form.php"> -->
-<form method="POST" action="form.php" enctype="multipart/form-data">
+<form method="POST" action="form.php" enctype="application/x-www-form-urlencoded">
 	<input type="file" name="my_file"> <br> <br>
 	<label for="name">Name:</label><br>
 	<input type="text" id="name" name="name"><br><br>
