--- a/html/startcgi.html
+++ b/html/startcgi.html
@@ -14,7 +14,7 @@
     </header>
     <nav>
         <a href="hardtest.html" class="previous">Previous</a>
-        <a href="post.html" class="next">Next</a>
+        <a href="get_cgi.html" class="next">Next</a>
     </nav>
 </body>
 </html>
