--- a/html/get.html
+++ b/html/get.html
@@ -18,7 +18,7 @@
             <h2>First Form</h2>
             <p>This form is being sent using get request!</p>
         </div>
-        <form action="" target="_blank">
+        <form action="">
             <label>
                 Name<br>
                 <input type="text" name="name" placeholder="Please insert your name!" required>
