--- a/html/get_cgi.html
+++ b/html/get_cgi.html
@@ -16,7 +16,7 @@
     <section class="get">
         <div class="title">
             <h2>First Form</h2>
-            <p>This form is being sent using get request!</p>
+            <p>This form is being sent using get request with CGI !</p>
         </div>
         <form action="./show_get.php" method="get">
             <label>
