--- a/html/post.html
+++ b/html/post.html
@@ -18,7 +18,7 @@
             <h2>Second Form</h2>
             <p>This form is being sent using post request!</p>
         </div>
-        <form action="" method="post" target="_blank" enctype="multipart/form-data">
+        <form action="" method="post" enctype="multipart/form-data">
             <label>
                 Name<br>
                 <input type="text" name="name" placeholder="Please insert a name to the file!" required>
@@ -29,6 +29,7 @@
             </label>
             <input type="submit" name="submit" value="Submit">
         </form>
+        <a href="/new_files" target="_blank" >If it works you will see the file in the folder new_files</a>
         <nav>
             <a href="get.html" class="previous">Previous</a>
             <a href="download.html" class="next">Next</a>
