--- a/locations/html/delete_method/delete_stay.html
+++ b/locations/html/delete_method/delete_stay.html
@@ -11,7 +11,7 @@
     
     <header>
         <h1>WebServ</h1>
-        <h2>Group: Jbach, Mgoncalv, Gefaivre</h2>
+        <h2>Group: Jbach, Gefaivre</h2>
         <p>All the content of this site is being loaded from our server using get request!</p>
     </header>
     <section class="get">
