--- a/locations/html/post.html
+++ b/locations/html/post.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>WebServ</h1>
-        <h2>Group: Jbach, Mgoncalv, Gefaivre</h2>
+        <h2>Group: Jbach, Gefaivre</h2>
         <p>All the content of this site is being loaded from our server using get request!</p>
     </header>
     <section class="get">
